<resources>
    <string name="app_name">WifiDirectSocial</string>
    <string name="action_settings">Settings</string>
    <string name="start_group">Avvia Protocollo</string>
    <string name="create_group">Crea gruppo</string>
    <string name="remove_group">Rimuovi gruppo</string>
    <string name="remove_group_da_Go">Rimuovi gruppo da Go</string>
    <string name="discover_peer">Inizia discover Peers</string>
    <string name="stop_discover_peer">Termina discover Peers</string>
    <string name="request_peer">Richiedi Lista Peers</string>
    <string name="connect_to_a_peer">Connect al primo peer della lista con Gow = 0</string>
    <string name="cancel_connect_to_a_peer">Cancella p2p group negotiation in corso </string>

    <string name="title_activity_list_view_json">listViewJson</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>

    <string name="name_label">Cancella p2p group negotiation in corso </string>
    <string name="email_label">Cancella p2p group negotiation in corso </string>
    <string name="phone_mobile_label">Cancella p2p group negotiation in corso </string>

</resources>
