<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">


    <Button
        android:id="@+id/start_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/start_group"
        />
    

    <Button
        android:id="@+id/create_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/start_group"
        android:text="@string/create_group"
     />

    <Button
        android:id="@+id/remove_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/create_group"
        android:text="@string/remove_group"
        />

    <Button
        android:id="@+id/remove_group_da_Go"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/remove_group"
        android:text="@string/remove_group_da_Go"
        />


    <Button
        android:id="@+id/discover_peer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/remove_group_da_Go"
        android:text="@string/discover_peer"
        />

    <Button
        android:id="@+id/stop_discover_peer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/discover_peer"
        android:text="@string/stop_discover_peer"
        />

    <Button
        android:id="@+id/request_peer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/stop_discover_peer"
        android:text="@string/request_peer"
        />

    <Button
        android:id="@+id/connect_to_a_peer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/request_peer"
        android:text="@string/connect_to_a_peer"
        />

    <Button
        android:id="@+id/cancel_connect_to_a_peer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/connect_to_a_peer"
        android:text="@string/cancel_connect_to_a_peer"
        />



</RelativeLayout>
